refactoring portfolio/ some formatting issues, alignment, height, width etc

--- a/assets/stylesheets/css/custom.css
+++ b/assets/stylesheets/css/custom.css
@@ -1,12 +1,5 @@
-/*!
- * Start Bootstrap - Resume v5.0.8 (https://startbootstrap.com/template-overviews/resume)
- * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-resume/blob/master/LICENSE)
- */
-
 body {
   font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  padding-top: 54px;
   color: #868e96;
 }
 
@@ -16,7 +9,6 @@ body {
     padding-left: 17rem;
   }
 }
-
 h1,
 h2,
 h3,
@@ -36,6 +28,8 @@ h1 {
 
 h2 {
   font-size: 3.5rem;
+  width: 30px;
+  border-bottom: 3px solid orange;
 }
 
 h3 {
@@ -75,14 +69,6 @@ p.lead {
   background-color: #BD5D38;
 }
 
-.dev-icons {
-  font-size: 3rem;
-}
-
-.dev-icons .list-inline-item i:hover {
-  color: #BD5D38;
-}
-
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 800;
   letter-spacing: 0.05rem;
@@ -91,6 +77,11 @@ p.lead {
 
 #sideNav .navbar-toggler:focus {
   outline-color: #d48a6e;
+}
+
+.nav-top{
+  background: #563D7C;
+  height: 2rem;
 }
 
 @media (min-width: 992px) {
@@ -136,27 +127,17 @@ p.lead {
   }
 }
 
-section.resume-section {
+section.portfolio-section {
   padding-top: 5rem !important;
-  padding-bottom: 5rem !important;
-  max-width: 75rem;
+  max-width: 95rem;
 }
 
-section.resume-section .resume-item .resume-date {
+section.portfolio-section .resume-item .resume-date {
   min-width: none;
 }
 
-@media (min-width: 768px) {
-  section.resume-section {
-    min-height: 100vh;
-  }
-  section.resume-section .resume-item .resume-date {
-    min-width: 18rem;
-  }
-}
-
 @media (min-width: 992px) {
-  section.resume-section {
+  section.portfolio-section {
     padding-top: 3rem !important;
     padding-bottom: 3rem !important;
   }
